react video application has been added

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -14,7 +14,7 @@
 @import '_gallery block.less';
 @import '_photo block.less';
 @import '_slider block.less';
-
+@import '_video-app block.less';
 
 
 
@@ -313,6 +313,9 @@
             .size(18px; 18px);
         }
         
+        &--search {
+            .size(25px; 25px);
+        }
     }
 }
 
