--- a/src/styles/_video-app block.less
+++ b/src/styles/_video-app block.less
@@ -1,34 +1,115 @@
 .video-app {
     
     &__preview-title {
-        .text-block-parameters(14px; 24px; bold; @base-text-color; 20px 20px 20px auto);
+        .text-block-parameters(14px; 24px; bold; @base-text-color; 0);
+        height: 72px;
+
+        @media @tablet, @phone {
+            height: auto;
+            margin-left: 20px;
+        }
+    }
+
+    &__preview-title-container {
+        height: auto;
+        position: relative;
+        padding: 15px;
+
+        @media @tablet, @phone {
+            padding: 0;
+            flex: 1 1 auto;
+            display: flex;
+            align-items: center;
+            height: auto;
+            border-bottom: 1px solid #ddd;
+        }
+
+
+        /*&:after {
+            content: "";
+            position: absolute;
+            background: linear-gradient(270deg, black, transparent);
+            .size(10px; 100%);
+            opacity: 0.1;
+            top: 0;
+            right: 0;
+
+
+            @media @tablet, @phone {
+                display: none;
+            }
+        }*/
     }
 
 
     &__video-wrapper {
         text-align: center;
-        width: 100%;
+        position: relative;
+        height: 0;
+        overflow: hidden;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
     }
 
     &__video {
-        .size(100%; 700px);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         text-align: center;
     }
-
-    &__preview-item {
-        cursor: pointer;
-    }
- 
 
     &__list {
         display: flex;
         padding: 0;
         margin: 0;
+
+        @media @tablet, @phone {
+            flex-wrap: wrap;
+        }
+    }
+
+    &__list-item {
+        list-style-type: none;
+        width: 20%;
+        background-color: @outer-color;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #e5e5e5;
+        }
+
+        @media @tablet, @phone {
+            width: 100%;
+        }
+
+        &:not(:last-child) {
+            .video-app__preview-title-container:after  {
+                content: "";
+                position: absolute;
+                background: linear-gradient(270deg, black, transparent);
+                .size(10px; 100%);
+                opacity: 0.1;
+                top: 0;
+                right: 0;
+
+
+                @media @tablet, @phone {
+                    display: none;
+                }
+            }
+        } 
     }
 
     &__item {
-        list-style-type: none;
-        width: 20%;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+
+        @media @tablet, @phone {
+            display: flex;
+        }
     }
 
     &__input {
@@ -73,7 +154,7 @@
         width: 100%;
         height: 56px;
         display: flex;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
     }
 
     &__img-container {
@@ -82,6 +163,11 @@
 
     &__preview-item {
         width: 100%;
+        display: block;
+
+        @media @tablet, @phone {
+            .size(160px; 90px);
+        }
     }
 
 }
