made image slider react app, some small style changes

--- a/src/styles/_video-app block.less
+++ b/src/styles/_video-app block.less
@@ -23,22 +23,6 @@
             height: auto;
             border-bottom: 1px solid #ddd;
         }
-
-
-        /*&:after {
-            content: "";
-            position: absolute;
-            background: linear-gradient(270deg, black, transparent);
-            .size(10px; 100%);
-            opacity: 0.1;
-            top: 0;
-            right: 0;
-
-
-            @media @tablet, @phone {
-                display: none;
-            }
-        }*/
     }
 
 
@@ -170,4 +154,12 @@
         }
     }
 
+    &__notification {
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: normal;
+        color: @base-text-color;
+        margin: 0 auto 60px auto;
+        text-align: center;
+    }
 }
