made navigation menu react application, changes logic. fixed small bug with nav menu in mobile reso

--- a/src/styles/_menu-section block.less
+++ b/src/styles/_menu-section block.less
@@ -39,8 +39,15 @@
         }
 
         @media @phone {
-            z-index: 4;
+            z-index: 2;
             position: fixed;
+
+        }
+
+        &--invisible {
+            @media @phone{
+                visibility: hidden;
+            }
         }
     }
 
