--- a/src/styles/_nav-section block.less
+++ b/src/styles/_nav-section block.less
@@ -5,6 +5,12 @@
         height: 56px;
         z-index: 1;
         position: fixed;
+
+        &--changed-z-index {
+            @media @phone {
+                z-index: 3;
+            }
+        }
     }
 
     &__list {
@@ -16,10 +22,16 @@
             flex-direction: column;
             z-index: 2;
             margin: 0;
-            opacity: 0;
             position: absolute;
             width: 100%;
         }
+
+        &--invisible {
+            @media @phone {
+                visibility: hidden;
+            }
+        }
+
     }
 
     &__item {
@@ -68,7 +80,7 @@
             border-top: 1px solid @menu-border-color-light;
         }
 
-        &::before {
+        /*&::before {
             content:  "";
             display: block;
             position: absolute;
@@ -77,7 +89,7 @@
             bottom: 0;
             left: 0;
             z-index: 100;
-        }
+        }*/
 
         &:hover,
         &:hover .nav-menu__link {
