--- a/src/styles/_menu-section-block.less
+++ b/src/styles/_menu-section-block.less
@@ -5,7 +5,9 @@
     position: relative;
 
     @media @phone {
-        margin-bottom: 56px;
+        //margin-bottom: 56px;
+        top: 0;
+        left: 0;
         position: relative;
     }
     
