--- a/src/styles/_nav-section-block.less
+++ b/src/styles/_nav-section-block.less
@@ -5,6 +5,8 @@
         height: 56px;
         z-index: 1;
         position: fixed;
+        top: 0;
+        left: 0;
 
         &--changed-z-index {
             @media @phone {
