--- a/src/styles/_video-app-block.less
+++ b/src/styles/_video-app-block.less
@@ -4,9 +4,18 @@
         .text-block-parameters(14px; 24px; bold; @base-text-color; 0);
         height: 72px;
 
+        @media @tablet {
+            margin-left: 20px;
+        }
+
+        @media @phone {
+            .text-block-parameters(13px; 16px; bold; @base-text-color; 0);
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+
         @media @tablet, @phone {
             height: auto;
-            margin-left: 20px;
         }
     }
 
@@ -151,6 +160,7 @@
 
         @media @tablet, @phone {
             .size(160px; 90px);
+            flex-shrink: 0;
         }
     }
 
